Fixed about me text alignment

--- a/style.css
+++ b/style.css
@@ -327,7 +327,6 @@ section{
 
 
 .story-text h3 {
-    text-align: center;
     padding-top: 1rem;
     padding-bottom: 0.5rem;
     font-style: italic;
